# kappa

./: AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  README  TODO  acconfig.h  client.c  client.tcl  client.tcl.in  config.h.in  configure  configure.in  default.bib  kappa  opensite  version.h
wkappa/: ChangeLog  README  index.html  test-link.html  test.html  wkappa.tcl
